--- a/style.dev.css
+++ b/style.dev.css
@@ -57,3 +57,19 @@ b {
     margin: -10px;
 }
 
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+    input {
+        top: 10px;
+        left: 2%;
+        width: 80%;
+        max-width: 400px;
+        min-width: none;
+        height: 20px;
+        font-size: 15px;
+    }
+
+    p {
+        font-size: 20px;
+    }
+}
