--- a/style.dev.css
+++ b/style.dev.css
@@ -27,6 +27,10 @@ input {
     box-shadow: inset 0 0 8px rgba(0,0,0,0.1), 0 0 16px rgba(0,0,0,0.1);
 }
 
+input:focus {
+    outline: none;
+}
+
 .valid {
     border: 5px solid rgb(68, 233, 68);
     border: 5px solid rgba(68, 233, 68, 0.5);
