--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-html, div{
+html {
     height: 100%;
 }
 
@@ -7,6 +7,10 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif;
+}
+
+#map {
+  height: 100%;
 }
 
 input {
