--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ html {
 
 body {
     height: 100%;
+    width: 100%;
     margin: 0;
     padding: 0;
     font-family: "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif;
@@ -13,49 +14,61 @@ body {
   height: 100%;
 }
 
-input[type="text"] {
-    margin: 0 0 10px 0;
-    padding: 15px;
-    width: 100%;
-    min-width: 200px;
-    max-width: 50%;
-    height: 50px;
-    position: absolute;
-    left: 25%;
-    top: 40px;
-    font-size: 20px;
-    border: 5px solid #FFF;
-    background: #FFF;
-    background: rgba(255,255,255,0.75);
-    -webkit-box-shadow: inset 0 0 8px rgba(0,0,0,0.1), 0 0 16px rgba(0,0,0,0.1);
-    box-shadow: inset 0 0 8px rgba(0,0,0,0.1), 0 0 16px rgba(0,0,0,0.1);
+#search-container {
+  width: 100%;
+  min-width: 200px;
+  max-width: 50%;
+  height: 50px;
+  position: absolute;
+  left: 25%;
+  top: 40px;
 }
 
-input[type="text"]:focus {
-    outline: none;
+.twitter-typeahead, input.typeahead {
+  width: 100%;
+  height: 100%;
+  font-size: 20px;
 }
 
-.valid {
-    border: 5px solid rgb(68, 233, 68);
-    border: 5px solid rgba(68, 233, 68, 0.5);
+input.typeahead {
+  border: 5px solid #FFF;
+  padding: 15px;
+  background: #FFF;
+  background: rgba(255,255,255,0.75);
+  -webkit-box-shadow: inset 0 0 8px rgba(0,0,0,0.1), 0 0 16px rgba(0,0,0,0.1);
+  box-shadow: inset 0 0 8px rgba(0,0,0,0.1), 0 0 16px rgba(0,0,0,0.1);
 }
 
-.invalid {
-    border: 5px solid rgb(250, 0, 0);
-    border: 5px solid rgba(250, 0, 0, 0.5);
+.tt-menu {
+  margin-top: 20px;
+  padding: 5px;
+  width: 100%;
 }
 
-p {
-    display: none;
-    position: absolute;
-    bottom: 0;
-    font-size: 40px;
-    width: 100%;
-    background: #FFF;
-    background: rgba(255,255,255,0.75);
-    text-align: center;
-    margin: 0;
-    padding: 20px;
+.tt-suggestion {
+  background-color: white;
+  padding: 15px;
+  width: 100%;
+  background: #FFF;
+  background: rgba(255,255,255,0.75);
+}
+
+.tt-cursor {
+  background-color: rgba(255, 255, 0, 0.75)!important;
+  color: #000 !important;
+}
+
+#geo-result {
+  display: none;
+  position: absolute;
+  bottom: 0;
+  font-size: 40px;
+  width: 100%;
+  background: #FFF;
+  background: rgba(255,255,255,0.75);
+  text-align: center;
+  margin: 0 auto;
+  padding: 20px 0;
 }
 
 b {
@@ -76,7 +89,7 @@ a.leaflet-retina .leaflet-control-layers-toggle {
 
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-width: 320px) and (max-width: 480px) {
-    input {
+    #search-container {
         top: 80px;
         left: 5%;
         width: 80%;
