--- a/style.css
+++ b/style.css
@@ -79,12 +79,12 @@ b {
 }
 
 /* Override Leaflet image path CSS */
-a.leaflet-control-layers-toggle {
-	background-image: url(bower_components/leaflet/dist/images/layers.png);
+.leaflet-control-layers-toggle {
+	background-image: url('bower_components/leaflet/dist/images/layers.png');
 }
 
-a.leaflet-retina .leaflet-control-layers-toggle {
-	background-image: url(bower_components/leaflet/dist/images/layers-2x.png);
+.leaflet-retina .leaflet-control-layers-toggle {
+	background-image: url('bower_components/leaflet/dist/images/layers-2x.png');
 }
 
 /* Smartphones (portrait and landscape) ----------- */
