--- a/style.css
+++ b/style.css
@@ -1,105 +1,32 @@
-html {
+html, body, #map {
     height: 100%;
-}
-
-body {
-    height: 100%;
+    font-family: system-ui;
+    font-weight: normal;
     width: 100%;
     margin: 0;
     padding: 0;
-    font-family: "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif;
-}
-
-#map {
-  height: 100%;
-}
-
-#search-container {
-  width: 100%;
-  min-width: 200px;
-  max-width: 50%;
-  height: 50px;
-  position: absolute;
-  left: 25%;
-  top: 40px;
-}
-
-.twitter-typeahead, input.typeahead {
-  width: 100%;
-  height: 100%;
-  font-size: 20px;
-}
-
-input.typeahead {
-  border: 5px solid #FFF;
-  padding: 15px;
-  background: #FFF;
-  background: rgba(255,255,255,0.75);
-  -webkit-box-shadow: inset 0 0 8px rgba(0,0,0,0.1), 0 0 16px rgba(0,0,0,0.1);
-  box-shadow: inset 0 0 8px rgba(0,0,0,0.1), 0 0 16px rgba(0,0,0,0.1);
-}
-
-.tt-menu {
-  margin-top: 20px;
-  padding: 5px;
-  width: 100%;
-}
-
-.tt-suggestion {
-  background-color: white;
-  padding: 15px;
-  width: 100%;
-  background: #FFF;
-  background: rgba(255,255,255,0.75);
-}
-
-.tt-cursor {
-  background-color: rgba(255, 255, 0, 0.75)!important;
-  color: #000 !important;
 }
 
 #geo-result {
-  display: none;
-  position: absolute;
-  bottom: 0;
-  font-size: 40px;
-  width: 100%;
-  background: #FFF;
-  background: rgba(255,255,255,0.75);
-  text-align: center;
-  margin: 0 auto;
-  padding: 20px 0;
+    box-sizing: border-box;
+    font-size: 40px;
+    position: absolute;
+    z-index: 9999;
+    bottom: 0;
+    width: 100%;
+    margin: 0 auto;
+    padding: 20px;
+    text-align: center;
+    background: rgba(255, 255, 255, .75);
 }
 
-b {
-    background: #FF0;
-    background: rgba(255, 255, 0, 0.5);
-    padding: 10px;
+#found {
+    display: none;
+}
+
+#location {
+    display: inline-block;
     margin: -10px;
-}
-
-/* Override Leaflet image path CSS */
-.leaflet-control-layers-toggle {
-	background-image: url('bower_components/leaflet/dist/images/layers.png');
-}
-
-.leaflet-retina .leaflet-control-layers-toggle {
-	background-image: url('bower_components/leaflet/dist/images/layers-2x.png');
-}
-
-/* Smartphones (portrait and landscape) ----------- */
-@media only screen and (min-width: 320px) and (max-width: 480px) {
-    #search-container {
-        top: 80px;
-        left: 5%;
-        width: 80%;
-        max-width: 400px;
-        min-width: none;
-        height: 20px;
-        font-size: 15px;
-    }
-
-    p {
-        font-size: 20px;
-    }
+    padding: 10px;
+    background: rgba(255, 255, 0, .5);
 }
